# MBA

./: CMakeLists.txt  mbaConfig.cmake.in
app/: CMakeLists.txt  mainSimplest.C
src/: MBA.cpp  MBAdata.cpp  filterRestrict2D.cpp
